--- a/source/asset/css/_common/color.styl
+++ b/source/asset/css/_common/color.styl
@@ -23,13 +23,15 @@
   --color-audioplayer-lrc-mobile-back #ffffffee
   --color-post-license-back #ff330009
   --color-toc-link lighten(#000000, 20%)
+  --color-toc-active-text #ffffff
+  --color-toc-active-background lighten(#000000, 20%)
   --color-search-highlight #00cc99
 
 :root.colorful
   --color-text lighten(#000000, 20%)
   --color-background #ffffffcc
   --color-link #ff3300
-  --color-clear lighten(#ff3300, 66%)
+  --color-clear #99ccff
   --color-error brown
   --color-body-back url('https://uploadbeta.com/api/pictures/random/?key=BingEverydayWallpaperPicture')
   --color-header-text lighten(#000000, 20%)
@@ -41,15 +43,17 @@
   --color-goingto-shadow lighten(#ff0033, 33%)
   --color-menus-hover darken(#ffeeee, 6%)
   --color-menus-active-text #ffffff
-  --color-menus-active-background #ff3300
-  --color-settings-switch-on lighten(#000000, 20%)
-  --color-settings-switch-off lighten(#ff3300, 66%)
+  --color-menus-active-background #ff3399
+  --color-settings-switch-on #3399ff
+  --color-settings-switch-off #aaccff
   --color-audioplayer-lrc lighten(#000000, 33%)
   --color-audioplayer-lrc-current lighten(#000000, 6%)
   --color-audioplayer-lrc-background linear-gradient(180deg,hsla(0,0%,100%,0) 0,hsla(0,0%,100%,.8))
   --color-audioplayer-lrc-mobile-back #ffffffee
   --color-post-license-back #ff330009
   --color-toc-link #339966
+  --color-toc-active-text #ffffff
+  --color-toc-active-background #339966
   --color-search-highlight #00cc99
 
 :root.night
@@ -57,7 +61,7 @@
   --color-background #0c0c0cee
   --color-link #ff3399
   --color-clear #2d2d2d
-  --color-error brown
+  --color-error #ff3333
   --color-body-back #000000
   --color-header-text darken(#ffffff, 20%)
   --color-header-background #0c0c0c
@@ -66,7 +70,7 @@
   --color-progress-front #ff3300
   --color-progress-back lighten(#0c0c0c, 12%)
   --color-goingto-shadow darken(#ffffff, 20%)
-  --color-menus-hover lighten(#000000, 6%)
+  --color-menus-hover lighten(#000000, 12%)
   --color-menus-active-text #000000
   --color-menus-active-background darken(#ffffff, 20%)
   --color-settings-switch-on darken(#ffffff, 20%)
@@ -77,4 +81,6 @@
   --color-audioplayer-lrc-mobile-back #0c0c0cee
   --color-post-license-back #ff330009
   --color-toc-link darken(#ffffff, 20%)
+  --color-toc-active-text #0c0c0c
+  --color-toc-active-background darken(#ffffff, 20%)
   --color-search-highlight #00cc99
