--- a/source/asset/css/_part/toc.styl
+++ b/source/asset/css/_part/toc.styl
@@ -39,8 +39,8 @@
       &:hover
         background var(--color-clear)
       &.active
-        background var(--color-text)
-        color var(--color-background)
+        background var(--color-toc-active-background)
+        color var(--color-toc-active-text)
 
 @media (max-width: $app_mobile_width)
   [p-toc]
