--- a/source/asset/css/_part/pather.styl
+++ b/source/asset/css/_part/pather.styl
@@ -20,8 +20,9 @@
 [p-pather-home]
   float left
   line-height 1
-  margin 0 0.25em 0 0.75em
-  padding $font_size - 1px 0
+  padding $font_size - 1px
+  background var(--color-clear)
+  border-radius $gap 0 0 $gap
 
 [p-pather-queue]
   line-height 3
@@ -35,7 +36,7 @@
     padding 0 0.6em
     margin ($font_size * 3 - $font_size * 0.75 * 1.6) * 0.5 0
     border-radius 0.6em 0
-    margin-right 1em
+    margin-left 1em
     transition all 0.6s
     &:hover
       box-shadow 0 0 0.5em 2px var(--color-link)
