--- a/source/asset/css/_common/layout.styl
+++ b/source/asset/css/_common/layout.styl
@@ -302,6 +302,9 @@ a
       text-decoration none
       &:after
         width 100%
+  .highlight
+    figcaption
+      line-height 1.5
 
 :root.colorful
   [m-evanyou-canvas]
