--- a/source/asset/css/_part/audioplayer.styl
+++ b/source/asset/css/_part/audioplayer.styl
@@ -26,7 +26,7 @@
 [p-audioplayer-player]
   white-space normal
   max-height $audioplayer_height + $audioplayer_list_height
-  .aplayer
+  .aplayer.aplayer-withlist
     margin 0
     box-shadow none
     background none
