--- a/source/asset/css/_part/search.styl
+++ b/source/asset/css/_part/search.styl
@@ -7,7 +7,7 @@
 [p-search]
   user-select none
   overflow-x hidden
-  overflow-y auto
+  overflow-y scroll
   background var(--color-spinner-back)
   animation search-appear 0.6s ease
   position fixed
@@ -114,6 +114,7 @@
     padding 0 1em
   [p-search-dialog-result]
     > div
+      padding 1em
       padding-bottom 1em
     .message
       padding 2em 1em
