--- a/source/asset/css/_common/layout.styl
+++ b/source/asset/css/_common/layout.styl
@@ -303,6 +303,10 @@ a
       &:after
         width 100%
   .highlight
+    a
+      color var(--color-link)
+      &:after
+        background var(--color-link)
     figcaption
       line-height 1.5
 
