--- a/source/asset/css/_plugin/highlight.styl
+++ b/source/asset/css/_plugin/highlight.styl
@@ -60,6 +60,7 @@ $line-numbers
       margin 0
       width auto
       &::-webkit-scrollbar
+        width $gap
         height $gap
       &::-webkit-scrollbar-thumb
         background color-scrollbar
