--- a/source/asset/css/_part/brand.styl
+++ b/source/asset/css/_part/brand.styl
@@ -26,9 +26,11 @@
   background var(--color-clear)
   font-size 1.5em
   line-height 2
+  white-space nowrap
 
 [p-brand-slogan]
   line-height 3
+  white-space nowrap
 
 [p-brand-counts]
   padding-bottom $gap * 1.25
