--- a/source/asset/css/_part/footer.styl
+++ b/source/asset/css/_part/footer.styl
@@ -8,7 +8,7 @@
   overflow hidden
   user-select none
   animation footer-appear 0.6s ease
-  padding $gap
+  padding $font_size
   text-align center
 
 [p-footer-powered], [p-footer-theme]
