--- a/source/asset/part/comment.ejs
+++ b/source/asset/part/comment.ejs
@@ -1,4 +1,4 @@
-<div p-comment data-comment-pass="<%- config.valine.pass %>" data-comment-pointer="<%- config.valine.pointer %>">
+<div p-comment>
   <div p-comment-caption>
     <%- theme.comment.icon %>
     <span data-lang="comment.caption"></span>
