--- a/source/asset/part/recentposts.ejs
+++ b/source/asset/part/recentposts.ejs
@@ -12,17 +12,17 @@
         <a p-recentpost-title-link></a>
       </div>
       <div p-recentpost-meta>
-        <div p-recentpost-date data-lang="recentposts.date" data-lang-titled>
+        <div p-recentpost-date>
           <%- theme.recentposts.icons.date %>
-          <span></span>
+          <span data-lang="recentposts.date" data-lang-titled></span>
         </div>
-        <div p-recentpost-updated data-lang="recentposts.updated" data-lang-titled>
+        <div p-recentpost-updated>
           <%- theme.recentposts.icons.updated %>
-          <span></span>
+          <span data-lang="recentposts.updated" data-lang-titled></span>
         </div>
-        <div p-recentpost-categories data-lang="recentposts.categories" data-lang-titled>
+        <div p-recentpost-categories>
           <%- theme.recentposts.icons.categories %>
-          <span></span>
+          <span data-lang="recentposts.categories" data-lang-titled></span>
         </div>
       </div>
       <div p-recentpost-excerpt></div>
